# wex

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md
include/wex/: Common.hpp  Engine.hpp  Forward.hpp  Game.hpp  GraphicsController.hpp  Input.hpp  common.hpp  util.hpp
include/wex/presets/: Component.hpp  GameObject.hpp
sample/: CMakeLists.txt
src/: Engine.cpp  main.cpp
src/wex/: Engine.cpp  Game.cpp  GraphicsController.cpp
